2014-01-07  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* Mark Oteiza: 32238: suppress error output completing after ip.

2014-01-06  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* unposted: Config/version.mk: update to 5.0.5-dev-0 to avoid
	installation clash with 5.0.5 release.

2014-01-05  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* unposted: Config/version.mk, Doc/Zsh/compsys.yo: update
	release to 5.0.5 and correct typo in compsys.yo making texinfo
	format unusable.

	* unposted but c.f. 32231: Doc/Zsh/compsys.yo: the parameter
        'line' doesn't include the original command.

	* Jun T: 32231: Completion/Unix/Command/_chmod: was confused by
	options before the mode argument.

	* Axel Beckert: 32229: LICENCE: was not correctly referring to
	Gnu General Public License.

2014-01-03  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* unposted: README: update another reference to 5.0.5.

	* users/18271 plus some additional rewriting: Etc/FAQ.yo: add
	FAQ entry to explain pattern exclusions.

	* unposted: README, Etc/FAQ.yo: update source documentation for
	5.0.5.

2014-01-02  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* Danek Duvall: 32216: Completion/Solaris/Command/_svcadm,
	Completion/Solaris/Command/_zoneadm,
	Completion/Unix/Command/_zfs, Completion/Unix/Command/_zpool,
	Completion/Unix/Type/_zfs_dataset: updates for Solaris 11,
	Update 1.

	* 32196: Carl Drougge: Src/Zle/zle_misc.c: copy-prev-shell-word
	needs an extra flag to work properly.

2013-12-31  Barton E. Schaefer  <schaefer@zsh.org>

	* Eric Cook: 32210: Completion/Linux/Command/_sysstat: completion
	for mpstat, iostat, etc.

2013-12-30  Barton E. Schaefer  <schaefer@zsh.org>

	* 32208: Src/params.c: always reset pathchecked when the path
	array is modified in arrvarsetfn(), to avoid bad dereference

	* 32205: Completion/Zsh/Command/_cd: skip cdpath search when
	the prefix begins with "../" (bug introduced by 31714)
